# Jignasa

./: .gitignore  CONTRIBUTING.md  Dockerfile  Jignasa.desktop  LICENSE  README.md  all_changes.patch  docker-compose.yml  pyproject.toml  run_all.bat  run_all.command  run_all.sh  run_api.sh  skills-lock.json
.github/workflows/: deploy-pages.yml  release.yml
RAG With LangChain/: rag_with_langchain.ipynb  streamlit_app.py
RAG With LangChain/api/: __init__.py  cache.py  db.py  intent.py  main.py  query_transform.py  rag.py  security.py  websearch.py
RAG With LangChain/scripts/: evaluate_rag_metrics.py  generate_evaluation_set.py
RAG With LangChain/web/: index.html  package-lock.json  package.json
RAG Without Frameworks/: analyze-pdf.ipynb  rag_without_frameworks.ipynb
api/: README.md  agent.py  audit.py  cache.py  config.py  db.py  evaluation.py  intent.py  llm.py  main.py  memory.py  ollama_discovery.py  query_transform.py  rag.py  security.py  upload.py  websearch.py
archive/: README.md  rag_with_langchain.ipynb
data/: README.md  evaluation_set.json  evaluation_set_v2.json
docs/: AGENT_ROADMAP.md  CHANGELOG.md  DEPLOYMENT.md  TECHNICAL.md
knowledge-base/: README.md
pipeline/: 01_profile_corpus.py  02_parse_and_chunk.py  03_build_index.py  04_generate_eval_set.py  README.md  REBUILD_LOG.md  _add_to_index.py  _migrate_to_id_map.py  _parse_one_pdf.py
rag_index/: README.md
scripts/: README.md  eval_tool_selection.py  evaluate_rag_metrics.py  evaluate_ragas.py
web/: README.md  index.html  package-lock.json  package.json  vite.config.ts
(+45 files in other folders)
