[project]
name = "jignasa"
version = "0.1.0"
description = "Fully local, privacy-first RAG chatbot: chat naturally, search the live web, and ask questions about your own PDFs, all running on your machine via Ollama and FAISS."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "docling>=2.96.1",
    "faiss-cpu>=1.14.2",
    "langchain-community>=0.3,<0.4",
    "langchain-huggingface>=0.1.2",
    "numpy>=2.4.6",
    "ollama>=0.6.2",
    "pymupdf>=1.27.2.3",
    "sentence-transformers>=5.5.1",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "duckduckgo-search>=6.0",
    "ddgs>=9.14.4",
    "ragas>=0.4.3",
    "langchain-ollama>=1.1.0",
    "openai>=2.44.0",
    "anthropic>=0.112.0",
    "google-genai>=2.10.0",
    "python-multipart>=0.0.32",
]
